include changes from Lab 06

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 <body>
     <header>
         <h1 id="title">Pat's Salmon Cookies</h1>
+        <nav>
+            <ul>
+                <li>
+                    <p><a href="https://sfpagalan.github.io/cookie-stand/sales.html"></a></p>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <p>Welcome to Pat's Salmon Cookies! We offer delicious and eco-friendly treats for coffee time.</p>
