--- a/sales.html
+++ b/sales.html
@@ -46,6 +46,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salmon Cookie Stand</title>
     <style>
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+        nav ul li {
+            margin-right: 15px;
+            margin-bottom: 10px;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
@@ -63,6 +73,13 @@
 <body>
     <header>
         <h1>Salmon Cookie Stand</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://sfpagalan.github.io/cookie-stand/">Home Page</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <table id="sales-table">
