restarted the whole html and js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
             margin-bottom: 10px;
         }
 
+        nav ul li a {
+        text-decoration: none;
+        color: #f6f4f2;
+        padding: 5px 10px;
+        background-color: #483425;
+        border-radius: 10px;
+    }
+
+        nav ul li a:hover {
+        background-color: #c4a994;
+        border-radius: 5px;
+    }
+
         h1,
         h2,
         h3 {
@@ -39,7 +52,7 @@
         }
 
         h1 {
-            color: #FF0000;
+            color: #0b0b0b;
         }
 
         p {
@@ -47,7 +60,7 @@
         }
 
         .sales-data {
-            color: #0000FF;
+            color: #483425;
         }
 
         body {
