--- a/sales.html
+++ b/sales.html
@@ -5,28 +5,97 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales Data</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+    }
+
+    header {
+      background-color: #8b5a2b;
+      padding: 20px;
+      color: #fff;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #8b5a2b;
+      padding: 10px;
+    }
+
     nav ul {
         list-style-type: none;
-        padding: 0;
-        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    nav li {
+      margin: 0 auto;
     }
 
     nav ul li a {
         text-decoration: none;
-        color: #f6f4f2;
+        color: #fff;
         padding: 5px 10px;
-        background-color: #483425;
-        border-radius: 10px;
-    }
-
-    nav ul li a:hover {
-        background-color: #c4a994;
         border-radius: 5px;
     }
 
-    form {
-      margin-top: 20px;
+    nav ul li a:hover {
+        background-color: #654321;
+        border-radius: 5px;
     }
+
+    main {
+      padding: 20px;
+    }
+
+    form {
+      background-color: #f5f5f5;
+      margin-top: 20px;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    form label {
+      display: block;
+      margin-bottom: 10px;
+      color: #8b5a2b;
+    }
+
+    form input[type="text"],
+    form input[type="email"],
+    form textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #dcdcdc;
+      border-radius: 5px;
+      margin-bottom: 15px;
+    }
+
+    form textarea {
+      resize: vertical;
+    }
+
+    form button {
+      background-color: #8b5a2b;
+      color: #fff;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    form button:hover {
+      background-color: #654321;
+    }
+
     table {
         border-collapse: collapse;
         width: 100%;
@@ -53,6 +122,13 @@
     #staffing-table tbody tr:nth-child(even) {
         background-color: #c4a994;
     }
+
+    tfoot {
+      background-color: #8b5a2b;
+      padding: 10px;
+      color: #fff;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -71,13 +147,13 @@
         <fieldset>
             <legend>Add New Cookie Stand Location</legend>
             <label for="location">Location:</label>
-                <input type="text" id="location" required>
+                <input type="text" id="location" name="Seattle" required>
             <label for="min-customers">Minimum Customers:</label>
-                <input type="number" id="min-customers" required>
+                <input type="number" id="min-customers" name="10" required>
             <label for="max-customers">Maximum Customers:</label>
-                <input type="number" id="max-customers" required>
+                <input type="number" id="max-customers" name ="30" required>
             <label for="avg-cookies">Average Cookie Sale:</label>
-                <input type="number" step="0.1" id="avg-cookies" required>
+                <input type="number" step="0.1" id="avg-cookies" name="3.52" required>
             <button type="submit">Add Location</button>
         </fieldset>
     </form>
@@ -87,20 +163,20 @@
         <thead>
           <tr>
             <th>Location</th>
-            <th>6:00 am</th>
-            <th>7:00 am</th>
-            <th>8:00 am</th>
-            <th>9:00 am</th>
-            <th>10:00 am</th>
-            <th>11:00 am</th>
-            <th>12:00 pm</th>
-            <th>1:00 pm</th>
-            <th>2:00 pm</th>
-            <th>3:00 pm</th>
-            <th>4:00 pm</th>
-            <th>5:00 pm</th>
-            <th>6:00 pm</th>
-            <th>7:00 pm</th>
+            <th>0600</th>
+            <th>0700</th>
+            <th>0800</th>
+            <th>0900</th>
+            <th>1000</th>
+            <th>1100</th>
+            <th>1200</th>
+            <th>1300</th>
+            <th>1400</th>
+            <th>1500</th>
+            <th>1600</th>
+            <th>1700</th>
+            <th>1800</th>
+            <th>1900</th>
             <th>Daily Total</th>
           </tr>
         </thead>
@@ -117,20 +193,20 @@
         <thead>
           <tr>
             <th>Location</th>
-            <th>6:00 am</th>
-            <th>7:00 am</th>
-            <th>8:00 am</th>
-            <th>9:00 am</th>
-            <th>10:00 am</th>
-            <th>11:00 am</th>
-            <th>12:00 pm</th>
-            <th>1:00 pm</th>
-            <th>2:00 pm</th>
-            <th>3:00 pm</th>
-            <th>4:00 pm</th>
-            <th>5:00 pm</th>
-            <th>6:00 pm</th>
-            <th>7:00 pm</th>
+            <th>0600</th>
+            <th>0700</th>
+            <th>0800</th>
+            <th>0900</th>
+            <th>1000</th>
+            <th>1100</th>
+            <th>1200</th>
+            <th>1300</th>
+            <th>1400</th>
+            <th>1500</th>
+            <th>1600</th>
+            <th>1700</th>
+            <th>1800</th>
+            <th>1900</th>
           </tr>
         </thead>
         <tbody id="table-body">
